<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Petat</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_claim">AddClaimActivity</string>
    <string name="title_activity_edit_claim">EditClaimActivity</string>
    <string name="title_activity_edit_expense">EditExpenseActivity</string>
    <string name="title_activity_approver">ApproverActivity</string>
    <string name="title_activity_expense_list_view">ExpenseListViewActivity</string>
    <string name="Delete">Delete</string>
    <string name="Edit">Edit</string>
    <string name="NewExpense">Add New Expense</string>
    <string name="Expense">Expenses:</string>
    <string name="Status">Status</string>
    <string name="Description">Description</string>
    <string name="Claim">Existing Claims:</string>
    <string name="NewClaim">Add New Claim</string>
    <string name="User">Username</string>
    <string name="Approver">Approver</string>
    <string name="StartDate">Start</string>
    <string name="Name">Name</string>
    <string name="Add">Add</string>
    <string name="Date">Date</string>
    <string name="Category">Category</string>
    <string name="Cost">Cost</string>
    <string name="Currency">Currency</string>
    <string name="Ok">OK</string>
    <string name="Tags">Tags</string>
    <string name="Search">Search</string>
    <string name="Start">Start</string>
    <string name="Finish">Finish</string>
    <string name="Destination">Destination:</string>
    <string name="View">View Expenses</string>
    <string name="CurrentExpense">Current Expenses:</string>
    <string name="Des">Add Destination</string>
    <string name="Welcome">Welcome to the Travel Claims App.  Please login in to continue.</string>
    <string name="Register">Register</string>
    <string name="CreateUserText">Please full all fields and check box if you are an approver.</string>
    <string name="to">To</string>
    <string name="home">Select your home location.</string>
    <string name="AddTag">Add Tag</string>
    <string name="AddDes">Add Destination</string>

    <string-array name="StatusArray">
        <item>In Progress</item>
        <item>Aproved</item>
        <item>Returned</item>
    </string-array>
    <string-array name="CategoryArray">
        <item>Air Fare</item>
        <item>Ground Transport</item>
        <item>Vehicle Rental</item>
        <item>Private Vehicle</item>
        <item>Fuel</item>
        <item>Parking</item>
        <item>Registration</item>
        <item>Accommodation</item>
        <item>Meal</item>
        <item>Supplies</item>
    </string-array>
    <string-array name="CurrencyArray">
        <item>CAD</item>
        <item>USD</item>
        <item>JPY</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>CNY</item>
        <item>CHF</item>
    </string-array>

    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="title_activity_create_user">CreateUserActivity</string>
    <string name="CreateUser">Create User</string>
    <string name="PasswordAgain">Password Again</string>
    <string name="Approvers">Approvers</string>
    <string name="title_activity_search_actvity">Search</string>
    <string name="title_activity_expense_list">ExpenseListActivity</string>
    <string name="AddButton">Add</string>
    <string name="TagListTitle">Tags:</string>
    <string name="SearchHint">Eg. Food, Hotel, Taxi</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_approver_expense_list">ApproverExpenseListActivity</string>
    <string name="title_activity_des_tab">DesTabActivity</string>
    <string name="title_activity_tag_tab">TagTabActivity</string>
    <string name="Logout">Logout</string>
    <string name="ApproveClaims">Approve Claims</string>
    <string name="ReturnClaimL">Return To Claimlist</string>

</resources>
