<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingBottom="50dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="50dp" >

    <TextView
        android:id="@+id/Create_User_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CreateUserText"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/Create_Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/User" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/Create_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/Create_Password_Again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/PasswordAgain"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/Approver_Check_Box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Approver"
        android:textColor="#ffffff" />
    
    <Button
        android:id="@+id/Create_User_Button"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:background="@drawable/buttonshape"
        android:onClick="OnClickCreateUser"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/CreateUser"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/HomeLocationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:textColor="#ffffff" />

    <ImageButton
        android:id="@+id/HomeLocationIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="selectHomeLocation"
        android:src="@drawable/ic_action_map_icon" />

</LinearLayout>