<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="20dp" >

    <EditText
        android:id="@+id/Edit_Expense_Name2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Name"
        android:textColor="#ffffff" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/Edit_Expense_Date2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Date"
        android:inputType="date"
        android:textColor="#ffffff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/Edit_Expense_Cost2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/Cost"
            android:inputType="numberDecimal"
            android:textColor="#ffffff" />

        <Spinner
            android:id="@+id/CurrencySpinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/CurrencyArray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Spinner
            android:id="@+id/CategorySpinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/CategoryArray" />

        <EditText
            android:id="@+id/Edit_Expense_Description2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Description"
            android:inputType="textMultiLine"
            android:textColor="#ffffff" />

        <ImageView
            android:id="@+id/Edit_Expense_Image2"
            android:layout_width="match_parent"
            android:layout_height="152dp"
            android:src="@drawable/ic_action_new_picture" />

        <Button
            android:id="@+id/dit_Expense_Ok2"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/buttonshape"
            android:onClick="CreateExpense"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/Ok"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>