<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditClaimActivity" >

    <TextView
        android:id="@+id/Edit_Claim_DestinationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ClaimEnd"
        android:text="@string/Destination"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/Edit_Claim_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/Name" />

    <EditText
        android:id="@+id/ClaimStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Edit_Claim_Name"
        android:ems="10"
        android:hint="@string/StartDate"
        android:inputType="date" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/ClaimEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ClaimStart"
        android:ems="10"
        android:hint="@string/Finish"
        android:inputType="date" />

    <Button
        android:id="@+id/ViewExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/AddDestinationButton"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/Edit_Claim_Name"
        android:onClick="viewExpensesButton"
        android:text="@string/View" />

    <ListView
        android:id="@+id/DestinationList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/AddDestinationButton"
        android:layout_alignLeft="@+id/AddDestinationButton"
        android:layout_alignRight="@+id/edit_claim_expandablelist"
        android:layout_below="@+id/Edit_Claim_DestinationTitle" >

    </ListView>

    <ListView
        android:id="@+id/edit_claim_taglist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/AddTagbutton"
        android:layout_alignLeft="@+id/AddDestinationButton"
        android:layout_alignTop="@+id/AddDestinationButton"
        android:layout_marginTop="48dp" >

    </ListView>

    <Button
        android:id="@+id/AddTagbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ViewExpense"
        android:layout_alignLeft="@+id/ViewExpense"
        android:layout_alignRight="@+id/ViewExpense"
        android:onClick="addTagButton"
        android:text="Add Tag" />

    <Button
        android:id="@+id/AddDestinationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/AddTagbutton"
        android:layout_alignLeft="@+id/Edit_Claim_DestinationTitle"
        android:layout_alignRight="@+id/Edit_Claim_Name"
        android:layout_marginBottom="67dp"
        android:onClick="addDestinationButton"
        android:text="@string/Des" />

</RelativeLayout>