<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditExpenseActivity" >

    <EditText
        android:id="@+id/Edit_Expense_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/Name" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/Edit_Expense_Cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Edit_Expense_Date"
        android:ems="10"
        android:hint="@string/Cost"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/Edit_Expense_Ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:onClick="CreateExpense"
        android:text="@string/Ok" />

    <EditText
        android:id="@+id/Edit_Expense_Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/Edit_Expense_Name"
        android:ems="10"
        android:hint="@string/Date"
        android:inputType="date" />

    <Spinner
        android:id="@+id/CurrencySpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Edit_Expense_Cost"
        android:layout_toRightOf="@+id/Edit_Expense_Cost"
        android:entries="@array/CurrencyArray" />

    <EditText
        android:id="@+id/Edit_Expense_Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/CategorySpinner"
        android:layout_alignRight="@+id/CategorySpinner"
        android:layout_below="@+id/CategorySpinner"
        android:ems="10"
        android:hint="@string/Description"
        android:inputType="textMultiLine" />

    <Spinner
        android:id="@+id/CategorySpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Edit_Expense_Cost"
        android:layout_alignTop="@+id/CurrencySpinner"
        android:layout_toLeftOf="@+id/CurrencySpinner"
        android:entries="@array/CategoryArray" />

</RelativeLayout>