<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CreateUserActivity" >

    <TextView
        android:id="@+id/NewUsernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/User" />

    <TextView
        android:id="@+id/NewPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/NewUsernameEditText"
        android:layout_below="@+id/NewUsernameEditText"
        android:paddingTop="5dp"
        android:text="@string/Password" />

    <EditText
        android:id="@+id/NewPasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/NewPasswordTextView"
        android:ems="10" />

    <EditText
        android:id="@+id/NewPassAEditView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/NewPassATextView"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/NewUsernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/NewPasswordEditText"
        android:layout_below="@+id/NewUsernameTextView"
        android:ems="10" />

    <TextView
        android:id="@+id/NewPassATextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/NewPassAEditView"
        android:layout_below="@+id/NewPasswordEditText"
        android:paddingTop="5dp"
        android:text="@string/PasswordAgain" />

    <TextView
        android:id="@+id/ApproversTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/NewPassAEditView"
        android:layout_below="@+id/NewPassAEditView"
        android:paddingTop="5dp"
        android:text="@string/Approvers" />

    <Spinner
        android:id="@+id/ApproverSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ApproversTextView"
        android:layout_alignRight="@+id/NewPassAEditView"
        android:layout_below="@+id/ApproversTextView" />

    <Button
        android:id="@+id/AddApproverButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ApproverSpinner"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/ApproverSpinner"
        android:layout_toRightOf="@+id/ApproverSpinner"
        android:text="@string/Add" />

    <Button
        android:id="@+id/CreateUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ApproverSpinner"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/AddApproverButton"
        android:paddingTop="5dp"
        android:text="@string/CreateUser" />

    <ListView
        android:id="@+id/ApproverListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/CreateUserButton"
        android:layout_alignLeft="@+id/CreateUserButton"
        android:layout_below="@+id/ApproverSpinner" >

    </ListView>

</RelativeLayout>