<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainMenuActivity" >

    <Button
        android:id="@+id/Login_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:onClick="OnLoginClick"
        android:text="@string/Login" />

    <TextView
        android:id="@+id/NewPassATextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Login_Button"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/Login_Button"
        android:text="@string/User" />

    <EditText
        android:id="@+id/UsernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/NewPassATextView"
        android:layout_below="@+id/NewPassATextView"
        android:ems="10"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" />

    <TextView
        android:id="@+id/expenseAdaptor_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/UsernameEditText"
        android:layout_below="@+id/UsernameEditText"
        android:text="@string/Password" />

    <EditText
        android:id="@+id/PasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/expenseAdaptor_date"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <requestFocus />
    </EditText>

</RelativeLayout>
